--- a/.github/workflows/junit-test.yml
+++ b/.github/workflows/junit-test.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Set up JDK 21
-        uses: setup-java
+        uses: actions/setup-java@v4
         with: 
           distribution: 'oracle'
           java-version: '21'
